--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
   align-items: center;     /* 👈 alinea texto + bloque */
   gap: 50px;               /* espacio realista */
 }
@@ -276,9 +277,11 @@ body {
 }
 
 .salud-image img {
-  width: 550px;     
+  width: 350px;     
   max-width: 100%;
   height: auto;
+  margin: 40px auto 0;
+   justify-content: center;
 }
 
 /* ---------- BOTÓN ---------- */
@@ -293,6 +296,7 @@ body {
   border: 2px solid #7a3b1f;
   text-decoration: none;
   display: inline-block;
+   margin-bottom: 30px;
 }
 
 .btn-salud:hover {
